# haskell-binary-classification

./: LICENSE  README.md  homework1.cabal  stack.yaml
app/: Main.hs  PosProcessing.hs
gnuplotscripts/: im01.gn  im02.gn  im03.gn  im04.gn  im05.gn  im06.gn  im07.gn  im08.gn  im09.gn  im10.gn  im11.gn
src/: GrenadeExtras.hs  Shuffle.hs  Song.hs
src/GrenadeExtras/: GradNorm.hs  Orphan.hs  OrphanNum.hs  Zip.hs
src/Song/: Grenade.hs
