set terminal epscairo fontscale 0.6 size 12cm, 8cm linewidth 3
set xlabel "Number of neurons in hidden layer"
set ylabel "Classification error in test set"
set format y "%g %%"
set output 'im04.eps'
plot './kfold-val0.14/results-to-plot.txt' using 'hidden-layer-size':'validation-classification-error' with line title ""
